Fixed kanban load more button from jumping

--- a/src/app/component/kanban/kanban-column/kanban-column.component.scss
+++ b/src/app/component/kanban/kanban-column/kanban-column.component.scss
@@ -10,6 +10,10 @@
     height: 24px;
   }
 
+  .spacer {
+    min-height: 4px;
+  }
+
   &:hover, &:focus-visible {
     padding-bottom: 4px;
   }
